# FileProcessor

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: AppController.cpp  AppController.h  FileProcessor.cpp  FileProcessor.h  ProcessManager.cpp  ProcessManager.h  main.cpp
src/qml/: main.qml
